# pynest2d

./: .gitignore  CMakeLists.txt  GitVersion.yml  README.md  conandata.yml  conanfile.py  conanfile.txt  pyproject.toml.in  requirements.txt
.github/workflows/: conan-package.yml  requirements-conan-package.txt
Documentation/: Building.md  Developing.md  Packaging.md  System Requirements.md  Usage.md
cmake/: FindClipper.cmake  FindNLopt.cmake  FindSIP.cmake  Findclipper.cmake  Findlibnest2d.cmake  SIPMacros.cmake  StandardProjectSettings.cmake
python/: Box.sip  Circle.sip  Item.sip  ItemGroup.sip  NfpConfig.sip  Point.sip  Rectangle.sip  String.sip  pynest2d.sip
src/: BottomLeftConfig.sip  BottomLeftPlacer.sip  Box.sip  Circle.sip  DJDHeuristicConfig.sip  Item.sip  ItemGroup.sip  NfpConfig.sip  NfpPlacer.sip  Point.sip  Pynest2D.sip  Rectangle.sip  pynest2d.sip
test_package/: conanfile.py  test.py
